# mynumbercard-idp

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: autotest.yml  check.yml
Android/: README.md
Android/MyNumberCardAuth/: settings.gradle
backend/: .env  README.md  docker-compose-development.yml  docker-compose-examples.yml  docker-compose.yml
backend/examples/sample-rp/: Dockerfile  app.py  package-lock.json  package.json  pyproject.toml  server.js
backend/examples/sample-rp/docker/: Dockerfile  assign_setting.json.tmpl  keycloak.json.tmpl  package-lock.json  package.json  server.js
backend/examples/sample-rp/docker/public/css/: style.css
backend/examples/sample-rp/docker/views/: index.ejs
backend/examples/sample-rp/docker01/: assign_setting.json  keycloak.json  server.js
backend/examples/sample-rp/docker01/public/css/: style.css
backend/examples/sample-rp/docker02/: .dockerignore  README.md  assign_setting.json  keycloak.json  package-lock.json  package.json  server.js
backend/examples/sample-rp/docker02/views/: index.ejs
backend/examples/sample-rp/public/css/: style.css
backend/examples/sample-rp/static/: script.js
backend/examples/sample-rp/templates/: account.html  connect.html  connected.html  index.html  login.html  token.html
backend/examples/sample-rp/tests/: test_app.py
backend/examples/sample-rp/views/: index.ejs
backend/keycloak/: .dockerignore  Dockerfile  private.pem  public.pem
doc/: Idp_Authentication_APIリスト.yaml  Idp_Customization_APIリスト.yaml  ScreenFlow(WireFrame).xlsx
iOS/: README.md
iOS/MyNumberCardAuth/: .gitignore  .swift-format  MyNumberCardAuth.xctestplan  (+1 more)
infra/: README.md
(+328 files in other folders)
