[tool.poetry]
name = "samplerp"
version = "0.1.0"
description = ""
authors = ["hiromu-bit <hiromu0621@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
ruff = "^0.1.1"
black = "^23.10.0"
pytest = "^7.4.2"
mypy = "^1.6.1"
autoflake = "^2.2.1"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
